<resources>
    <string name="app_name">Todo - Notes</string>
    <string name="subtitlepage">Finish Them Quickly</string>
    <string name="endpage">No more todo\'s \nMade by shubham jangle</string>
    <string name="titlepage">My TO-DO</string>
    <string name="title_activity_update">Update Todo</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="dummy_desc_text">Buy a wisky from market in mumbai, this wisky should be the most expensive wisky in the shop</string>
    <string name="dummy_todo_title">Buy whiskas and all the vegetable required.</string>
    <string name="dummy_due_date">Tomorrow</string>
</resources>