<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:background="@color/colorPrimaryDark"
        android:layout_height="198dp">

        <TextView
            android:id="@+id/titlepage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/mm"
            android:text="@string/titlepage"
            android:textAlignment="center"
            android:textColor="#FFF"
            android:textSize="32sp" />

        <TextView
            android:id="@+id/subtitlepage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/ml"
            android:text="@string/subtitlepage"
            android:textAlignment="center"
            android:textColor="#4A4E6A"
            android:textSize="18sp" />

        <View
            android:layout_marginTop="20dp"
            android:background="#131E69"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_marginTop="-60dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </androidx.recyclerview.widget.RecyclerView>

    <TextView
        android:id="@+id/endpage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ml"
        android:text="@string/endpage"
        android:textAlignment="center"
        android:textColor="#9A9A9A"
        android:textSize="16sp" />

</LinearLayout>