<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mainLayout"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp"
    android:layout_width="match_parent"
    android:layout_height="70dp"
    android:layout_marginBottom="15dp"
    android:background="#FFF"
    android:orientation="vertical">


    <TextView
        android:id="@+id/todo_title"
        android:layout_width="0dp"
        android:layout_height="26dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/mm"
        android:text="@string/dummy_todo_title"
        android:textColor="#000C5D"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/todo_date"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/todo_date"
        android:layout_width="0dp"
        android:layout_height="23dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/ml"
        android:gravity="center_vertical"
        android:text="@string/dummy_due_date"
        android:textColor="#F63EA5"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toEndOf="@+id/todo_title"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/todo_desc"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_marginTop="7dp"
        android:fontFamily="@font/ml"
        android:text="@string/dummy_desc_text"
        android:textColor="#ADADAD"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/todo_title" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.03" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.97" />

</androidx.constraintlayout.widget.ConstraintLayout>